Tue Sep 04 02:56:00 BST 2007  Olly Betts <olly@survex.com>

	* matcher/andpostlist.cc: If the database has > 2G documents then the
	  sum of termfreq_min can overflow, so handle this case correctly.

Tue Sep 04 00:05:47 BST 2007  Olly Betts <olly@survex.com>

	* xapian-config.in: We always need to include dependency_libs in the
	  output of `xapian-config --libs` if shared libraries are disabled.

Mon Sep 03 16:28:33 BST 2007  Olly Betts <olly@survex.com>

	* bin/xapian-check.cc: Allow "xapian-check db/record." and
	  "xapian-check db/record.DB".

Mon Sep 03 02:16:43 BST 2007  Olly Betts <olly@survex.com>

	* docs/deprecation.rst,include/xapian/enquire.h: Deprecate
	  Enquire::register_match_decider().
	* api/omenquire.cc,common/omenquireinternal.h: Remove mdecider_map
	  since the set values are never used anywhere.

Sun Sep 02 20:54:33 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Add "update the 1.0.N tracker bug" to the release
	  checklist.

Fri Aug 31 10:44:19 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/api_db.cc,tests/api_wrdb.cc: Fix compilation of apitest,
	  which was broken on 64 bit platforms due to size_t instead of
	  doccount bug.

Fri Aug 24 11:56:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/matchspy.cc,include/xapian/matchspy.h: Fix uses of size_t
	  which should have been Xapian::doccount.  Was causing compile
	  errors on platforms where size_t and Xapian::doccount were
	  different sizes.

Fri Aug 03 20:10:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/api_nodb.cc: Add test_stringlistserialise1() to test the
	  StringListSerialiser and StringListUnserialiser.  Change the list
	  of testcases to use the TESTCASE and END_OF_TESTCASES macros.

Fri Aug 03 19:53:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/matchspy.cc,include/xapian/matchspy.h: Add StringListSerialiser
	  and StringListUnserialiser classes which can be used to serialise