@@ -61,7 +61,7 @@ CLEANFILES = xapian-config
 
 EXTRA_DIST = ChangeLog ChangeLog.examples HACKING PLATFORMS xapian-core.spec \
  autoconf/rjb_find_stlport.m4 autoconf/definedir.m4 autoconf/type_socklen_t.m4 \
- include/xapian/error.h include/xapian/errordispatch.h msvc/version.h \
+ include/xapian/error.h include/xapian/errordispatch.h \
  exception_data.pm
 
 # docsource.mk is generated by preautoreconf, run by bootstrap prior to
