@@ -1,36 +1,0 @@
-// @configure_input@
-// msvc/version.h: Define preprocesor symbols for the library version.
-//
-// This version.h is for the MSVC build.  The version.h used for the Unix
-// and CYGWIN builds is generated by running the configure script.
-//
-// Copyright (C) 2007 Olly Betts
-//
-// This program is free software; you can redistribute it and/or
-// modify it under the terms of the GNU General Public License as
-// published by the Free Software Foundation; either version 2 of the
-// License, or (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-// GNU General Public License for more details.
-//
-// You should have received a copy of the GNU General Public License
-// along with this program; if not, write to the Free Software
-// Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
-
-#ifndef XAPIAN_INCLUDED_VERSION_H
-#define XAPIAN_INCLUDED_VERSION_H
-
-#define XAPIAN_VERSION "@MAJOR_VERSION@.@MINOR_VERSION@.@REVISION@"
-#define XAPIAN_MAJOR_VERSION @MAJOR_VERSION@
-#define XAPIAN_MINOR_VERSION @MINOR_VERSION@
-#define XAPIAN_REVISION @REVISION@
-
-#define XAPIAN_HAS_FLINT_BACKEND 1
-#define XAPIAN_HAS_QUARTZ_BACKEND 1
-#define XAPIAN_HAS_INMEMORY_BACKEND 1
-#define XAPIAN_HAS_REMOTE_BACKEND 1
-
-#endif /* XAPIAN_INCLUDED_VERSION_H */
