@@ -1,3 +1,12 @@
+Tue Sep 04 09:57:25 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* Makefile.am,configure.ac,msvc/genversion.pl,msvc/version.h.in:
+	  Move msvc/genversion.pl and msvc/version.h.in to win32msvc in
+	  xapian-maintainer-tools.  Remove generation of msvc/version.h
+	  from configure.in, and AC_SUBST() of MAJOR_VERSION,
+	  MINOR_VERSION and REVISION, which were only in place for this
+	  generation.  Remove msvc/version.h from distribution tarballs.
+
 Tue Sep 04 02:56:00 BST 2007  Olly Betts <olly@survex.com>
 
 	* matcher/andpostlist.cc: If the database has > 2G documents then the
